Attribution internals table fix horizontal scroll
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5238467
Commit-Queue: Anthony Garant <anthonygarant@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1252299}

--- a/content/browser/resources/attribution_reporting/attribution_internals.css
+++ b/content/browser/resources/attribution_reporting/attribution_internals.css
@@ -39,6 +39,14 @@ main {
   padding-top: 1rem;
 }
 
+cr-tab-box, cr-tab-box * {
+  max-width: 100%;
+}
+
+attribution-internals-table {
+  overflow-x: auto;
+}
+
 .content {
   background-color: #fbfbfb;
   border: 1px solid #cecece;
